--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<h1>Midterm Election Clock</h1>
-	<p>The next midterm election is on November 6, 2018. Until that date there remains:</p>
+	<p>The next midterm election staryts on November 6, 2018, 7:00 am, Eastern. Until that date and time there remains:</p>
 	<div id="clockdiv">
     Days: <span class="days"></span><br>
     Hours: <span class="hours"></span><br>
